<resources>
    <string name="app_name">UniPal</string>
    <string name="action_user">User</string>
    <string name="action_schools">Schools</string>
    <string name="action_courses">Courses</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="title_new_event">New Event</string>
    <string name="action_new_event">New Event</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="title_new_school">New School</string>
    <string name="action_new_school">New School</string>
    <string name="action_edit_school">Edit School</string>
    <string name="title_new_course">New Course</string>
    <string name="action_new_course">New Course</string>
    <string name="action_edit_course">Edit Course</string>
    <string-array name="event_types">
        <item>Assignment</item>
        <item>Exam</item>
        <item>Other</item>
        <item>Presentation</item>
        <item>Project</item>
        <item>Quiz</item>
        <item>Report</item>
        <item>Test</item>
    </string-array>
    <string-array name="event_alarms">
        <item>No alarm</item>
        <item>On time</item>
        <item>One hour prior</item>
        <item>One day prior</item>
        <item>One week prior</item>
    </string-array>
</resources>
