<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_user"
        android:title="@string/action_user"
        app:showAsAction="never"/>

    <item android:id="@+id/action_schools"
        android:title="@string/action_schools"
        app:showAsAction="never"/>

    <item android:id="@+id/action_courses"
        android:title="@string/action_courses"
        app:showAsAction="never"/>

    <item android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        app:showAsAction="never"/>

    <item android:id="@+id/action_dashboard"
        android:title="@string/action_dashboard"
        app:showAsAction="never"/>

    <item android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>

</menu>
