<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/action_dashboard" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/action_courses" />

    <item
        android:id="@+id/navigation_schools"
        android:icon="@drawable/ic_schools"
        android:title="@string/action_schools" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/action_user" />

</menu>
